# MOST2021_assembly

./: .gitignore  .gitmodules  README.md  assembly_rviz.rviz
affordance2/: CMakeLists.txt  package.xml
affordance2/msg/: bbox.msg  seg_out.msg
affordance2/src/: Det_Node.py  seg_model.py
assembly_srv/: CMakeLists.txt  package.xml
assembly_srv/srv/: AffordSegOut.srv  Bboxes.srv  GraspPose.srv  ImgInfo.srv  TakePic.srv
dataloaders/: __init__.py  utils.py
dataloaders/datasets/: pascal.py
dual_arm_strategy/: CMakeLists.txt  package.xml
dual_arm_strategy/src/: assembly_tmp.py
get_img_info/: CMakeLists.txt  package.xml
get_img_info/src/: get_img_info.py
get_motor/: CMakeLists.txt  package.xml
get_motor/conf/: get_motor_rviz.rviz
get_motor/launch/: get_motor.launch
get_motor/sample/: motor_new.pcd
get_motor/src/: get_motor.cpp
get_screw_cloud/: CMakeLists.txt  package.xml
get_screw_cloud/src/: get_screw_cloud.cpp
get_screw_terminal/: CMakeLists.txt  package.xml
get_screw_terminal/src/: get_screw_terminal.cpp
motor_pose/: CMakeLists.txt  motor.pcd  package.xml  scene_motor_screw.pcd
motor_pose/src/: motor_pose.cpp
obj_detect/: CMakeLists.txt  package.xml
obj_detect/cfg/: yolov4-components.cfg
obj_detect/data/: obj.names
obj_detect/launch/: obj_detect.launch
obj_detect/src/: Det_Node.py
part_afford_seg/: CMakeLists.txt  package.xml
part_afford_seg/msg/: center.msg  seg_out.msg
select_workspace/: CMakeLists.txt  package.xml
strategy/: CMakeLists.txt  package.xml
tool/: utils.py  utils_seg.py
(+5 files in other folders)
